# ecoagent

./: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  HACKATHON_SUMMARY.md  README.md  SPACE_README_TEMPLATE.md  SUBMISSION_COMPLETE.md  app.py  chatgpt_integration.py  pyproject.toml  requirements-mcp.txt  requirements.txt  space.yml  space_readme.md
demo/: README.md  interactive_demo.py  quickstart_examples.sh  quickstart_examples_fixed.sh  quickstart_examples_fixed.sh.bak  scenario_urban_dweller.py
docs/: CLEANUP_ORGANIZATION_SUMMARY.md  HACKATHON_SUBMISSION_GUIDE.md  OPENAI_SUBMISSION_CATEGORIES.md  PUBLICATION_GUIDE.md  QUICK_PUBLICATION_GUIDE.md  SUBMISSION_CHECKLIST.md  setup_and_usage.md
docs/api/: APPS_SDK_CONFIG.md  APPS_SDK_FILES.md  APPS_SDK_IMPLEMENTATION.md  APPS_SDK_INDEX.md  APPS_SDK_QUICK_REFERENCE.md  APPS_SDK_README.md
docs/chatgpt/: OPENAI_BEST_PRACTICES.md
docs/hackathon/: FINAL_SUBMISSION_PACKAGE.md  HACKATHON_PLAN.md  demo_video_script.md
docs/hackathon_submissions/: hackathon_submission.md  verify_hackathon_submission.py
docs/mcp/: MCP_CLAUDE_CURSOR_INTEGRATION.md  MCP_TESTING.md  OPENAI_CATEGORY_SUBMISSION.md  OPENAI_SUBMISSION.md  SPACE_README_TEMPLATE.md  claude_cursor_integration.md  mcp_submission_summary.md
docs/reference/: APPS_SDK_CHECKLIST.md  APPS_SDK_DEPLOYMENT_GUIDE.md  APPS_SDK_IMPLEMENTATION_SUMMARY.md  HACKATHON_CHECKLIST.md  HACKATHON_START_HERE.md  INDEX.md  PROJECT_STRUCTURE.md  START_HERE.md  START_NOW.md  SUBMISSION_SUMMARY.md  UV_INTEGRATION_COMPLETE.md  VIDEO_RECORDING_GUIDE.md
docs/setup/: RUNNING_THE_SERVER.md  SETUP.md  UV_FIX.md  UV_QUICKSTART.md  UV_SETUP.md  deployment_guide.md
docs/tutorials/: CHATGPT_INTEGRATION.md
ecoagent/: AGENTS.md  SYSTEM_PROMPT.md  VIDEO_PROMPT.md  __init__.py  a2a_protocol.py  advanced_tools.py  config.py  context_engineering.py  database.py  errors.py  gemini_utils.py  models.py  observability.py  operations.py  sessions_and_memory.py  sessions_and_memory_services.py
ecoagent/carbon_calculator/: __init__.py  agent.py
ecoagent/community/: __init__.py  agent.py
ecoagent/progress_tracker/: __init__.py  agent.py
ecoagent/recommendation/: agent.py
ecoagent/tools/: __init__.py  memory.py  observability.py  operations.py
ecoagent/utils/: unit_conversion.py
hackathon_submission/: README.md  demo_video_script.md  requirements.txt  verify_final.py  verify_final_mcp.py  verify_mcp_server.py
hackathon_submission/src/: __init__.py  main.py  mcp_server.py  pyproject.toml
public/: ecoagent-widget.html
src/chatgpt_app/: chatgpt_app.py
src/core/: agent.py  api.py  cli.py  main.py
src/mcp_server/: mcp_server.py  mcp_server_minimal.py
src/sdk/: mcp_apps_sdk_server.py
src/tools/: __init__.py  carbon_calculator.py  chatgpt_app.py  chatgpt_integration.py  delegation.py  search_grounding.py  unit_converter.py
tests/: test_agents.py  test_context_engineering.py  test_ecoagent.py  test_operations.py  test_sessions_and_memory_services.py
tools/: test_runner.py
