[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
name = "ecoagent"
version = "1.0.0"
description = "EcoAgent - Sustainability Assistant with ChatGPT Apps SDK Integration"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vinh Nguyen", email = "vinh@example.com" }]

dependencies = [
    # Core
    "pydantic>=1.10.0",
    "gradio>=4.40.0,<5.0.0", # Python 3.9 compatible version

    # Google API
    "google-api-core>=2.0.0",
    "google-auth>=2.0.0",
    "google-cloud-vision>=3.0.0",

    # Supporting libraries
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0", "mypy>=0.950"]

[tool.setuptools]
packages = ["ecoagent"]
